# VentureInsights-Backend

./: API.md  MCP_API.md  README.md  main.py  mcp_server.py  pyproject.toml
backend/: dependencies.py  settings.py
backend/agents/: base.py  chat_agent.py  customer_sentiment.py  document_processing.py  finance.py  linkedin_team.py  market_analysis.py  output_parser.py  partnership_network.py  regulatory_compliance.py  risk_analysis.py  vector_store.py
backend/api/: auth.py  chat.py  companies.py  customer_sentiment.py  files.py  finance.py  linkedin_team.py  market_analysis.py  news.py  partnership_network.py  regulatory_compliance.py  research.py  risk_analysis.py
backend/data/: sample_card.json
backend/database/: mongo.py
backend/docs/: chat_service_api.md
backend/middlewares/: auth.py
backend/models/base/: chat.py  exceptions.py  users.py
backend/models/requests/: auth.py  chat.py  customer_sentiment.py  files.py  market_analysis.py  research.py
backend/models/response/: auth.py  base.py  chat.py  companies.py  customer_sentiment.py  files.py  finance.py  linkedin_team.py  market_analysis.py  news.py  (+5 more)
backend/plot/: factory.py
backend/services/: auth.py  chat.py  companies.py  customer_sentiment.py  files.py  finance.py  knowledge.py  linkedin_team.py  market_analysis.py  news.py  partnership_network.py  regulatory_compliance.py  research.py  risk_analysis.py  team.py
backend/utils/: api_helpers.py  documents.py  exceptions.py  knowledge.py  llm.py  logger.py  openai_patch.py  storage.py  time_utils.py
static/: bokeh_plot.html  plot.html
(+4 files in other folders)
